--- a/deployment.yaml
+++ b/deployment.yaml
@@ -18,7 +18,7 @@ spec:
         app: flaskdemo
     spec:
       containers:
-      - image: skinnysyddocker/pylocaltest:1
+      - image: skinnysyddocker/pylocaltest:latest
         name: flaskdemo
         resources: {}
 status: {}
