Done by Jenkins Job changemanifest: 9

--- a/deployment.yaml
+++ b/deployment.yaml
@@ -18,7 +18,7 @@ spec:
         app: flaskdemo
     spec:
       containers:
-      - image: skinnysyddocker/pylocaltest:latest
+      - image: skinnysyddocker/pylocaltest:21
         name: flaskdemo
         resources: {}
 status: {}
