--- a/deployment.yaml
+++ b/deployment.yaml
@@ -18,7 +18,7 @@ spec:
         app: flaskdemodev
     spec:
       containers:
-      - image: skinnysydcontainersregistry.azurecr.io/pylocaltestpfe:24
+      - image: skinnysydcontainersregistry.azurecr.io/pylocaltestdevpfe:24
         name: flaskdemodev
         resources:
           requests:
