--- a/deployment.yaml
+++ b/deployment.yaml
@@ -26,9 +26,9 @@ status: {}
 apiVersion: v1
 kind: Service
 metadata:
-  name: lb-service
+  name: lb-service-pfe
   labels:
-    app: lb-service
+    app: lb-service-pfe
 spec:
   type: LoadBalancer
   ports:
