--- a/deployment.yaml
+++ b/deployment.yaml
@@ -18,7 +18,7 @@ spec:
         app: flaskdemo
     spec:
       containers:
-      - image: skinnysydcontainersregistry.azurecr.io/pylocaltestpfe:27
+      - image: skinnysydcontainersregistry.azurecr.io/pylocaltest:22
         name: flaskdemo
         resources: {}
 status: {}
